# centinela

./: .gitignore  GUIA.md  Makefile  README.md  pyproject.toml
config/: agents.yaml  centinela.yaml  policies.yaml
docker/: Dockerfile.sandbox
scripts/: build-sandbox.sh  setup.sh
src/centinela/: __init__.py  __main__.py
src/centinela/agents/: base.py  coder.py  executor.py  researcher.py  reviewer.py
src/centinela/core/: config.py  memory.py  models.py  orchestrator.py
src/centinela/gateway/: middleware.py  routes.py  server.py  streaming.py
src/centinela/interfaces/: cli.py  daemon.py  slack_bot.py  telegram_bot.py
src/centinela/security/: approval.py  audit.py  auth.py  permissions.py  policies.py  sandbox.py
src/centinela/tools/: filesystem.py  rag.py  registry.py  shell.py  web.py
tests/: test_gateway.py  test_models.py  test_phase3.py  test_phase5.py  test_security.py  test_tools.py
